# UmrahFlightWatch

./: .dockerignore  .env  .env.example  Dockerfile  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  scheduler.py
app/admin/: __init__.py  telegram_admin.py
app/db/: locks.py  models.py  session.py
app/db/migrations/: README  env.py
app/db/migrations/versions/: 20260520_0001_initial.py  20260523_0002_watchlist_candidates.py  20260523_0003_remove_fast_flights_column.py  20260523_0004_drop_watchlist_candidates.py
app/jobs/: __init__.py  cleanup_jobs.py  report_jobs.py  scan_jobs.py
app/providers/: __init__.py  base.py  fli_provider.py
app/services/: app_settings.py  cleanup.py  deal_scoring.py  deal_selection.py  link_builder.py  market_baseline.py  provider_usage.py  report_builder.py  telegram_client.py
app/utils/: __init__.py  dates.py  formatting.py
tests/: test_admin.py  test_config.py  test_dates.py  test_db_session.py  test_deal_scoring.py  test_deal_selection.py  test_formatting_and_reports.py  test_locks.py  test_provider_normalization.py  test_report_jobs.py  test_scan_service.py  test_scheduler.py  test_telegram_client.py
